--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
   <div id="root"></div>
 </body>
-<script src="./build/bundle.js"></script>
+<script src="./build/bundle.min.js"></script>
 
 </html>
