--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>saber2pr</title>
+  <style>
+    .d {
+      color: #944a73c0
+    }
+  </style>
 </head>
 
 <body>
