--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>saber2pr</title>
   <style>
-    .d {
-      color: #944a73c0
-    }
+  .a {
+    color: #58626b
+  }
   </style>
 </head>
 
