--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>saber2pr</title>
 </head>
 
-<body></body>
+<body>
+  <div id="root"></div>
+</body>
 <script src="./build/bundle.min.js"></script>
 
 </html>
